# gcavbd

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/gcavbd/core/: types.h
source/: benchmark.cpp  benchmark.h  joint.cpp  manifold.cpp  rigid.cpp  solver.cpp  solver.h
src/core/: types.cpp
test/: validate_benchmark_csv.cmake
tests/: test_math.cpp
